fixed the dropdown toggle from jumping to the beginning of the page

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -38,8 +38,6 @@ a:hover {
 /* Dropdown links */
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
     display: block;
 }
 
